<resources>
    <string name="app_name">Oil</string>
    <string name="title_activity_maps">Map</string>
    <string name="order">Заказ</string>
    <string name="_25">Номер заказа : 25</string>
    <string name="address">Адрес:</string>
    <string name="date">Дата:</string>
    <string name="customer_info">Информация о заказчике</string>
    <string name="deal_info">Информация о сделке</string>
    <string name="fullname">Ф.И.О</string>
    <string name="mail">Е-mail адрес</string>
    <string name="auth">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="remember">Запомнить меня</string>
    <string name="enter">Войти</string>
    <string name="create_order">Создать сделку</string>
    <string name="info">Справочники</string>
    <string name="reports">Отчёты</string>
    <string name="orders">Сделки</string>
    <string name="warehouse">Склад</string>
    <string name="profile">Профиль</string>
    <string name="home">Главная</string>
    <string name="deal">Сделка</string>
    <string name="time">Время</string>
    <string name="dateofBirth">Дата рождения:</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="i_have">Есть</string>
    <string name="i_dont_have">Нет</string>
    <string name="car_brand">Марка авто</string>
    <string name="car_brands">Марки авто</string>
    <string name="car_model">Модель + год выпуска + расшифровка</string>
    <string name="current_mileage">Текущий пробег</string>
    <string name="kinda_service">Тип операции</string>
    <string name="oil_brand">Выбрать марку масла</string>
    <string name="filter_brand">Выбор марки фильтра</string>
    <string name="calculation">Калькуляция</string>
    <string name="oil">Масла</string>
    <string name="filter">Фильтр</string>
    <string name="filters">Фильтры</string>
    <string name="sum">На сумму</string>
    <string name="drive">Выезд</string>
    <string name="next_change">Фиксация следующей замены</string>
    <string name="finish_transaction">ЗАВЕРШИТЬ СДЕЛКУ</string>
    <string name="manual">Справочники</string>
    <string name="create">Create</string>
    <string name="gears">Коробки передач</string>
    <string name="engines">Двигатели</string>
    <string name="engine">Двигатель</string>
    <string name="engine_bold"><b>Двигатель :</b></string>
    <string name="manuals">Справочные материалы</string>
    <string name="is_this_a_turbo_engine">Подходит ли для \nтурбированных двигателей?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="producer">Производитель</string>
    <string name="price">Цена</string>
    <string name="for_model">Для модели</string>
    <string name="model">Модель</string>
    <string name="for_engine">Для двигателя</string>
    <string name="composition">Состав</string>
    <string name="composition_bold"><b>Состав: </b></string>
    <string name="viscosity_bold"><b>Вязкость: </b></string>
    <string name="class_string_bold">Класс: </string>
    <string name="viscosity">Вязкость</string>
    <string name="class_string">Класс</string>
    <string name="classes_string">Класс</string>
    <string name="edit">Редактировать</string>
    <string name="oil_filter">Маслянные фильтры</string>
    <string name="find_car">Поиск авто</string>
    <string name="generation">Поколение</string>
    <string name="car_body">Кузов</string>
    <string name="yearOfManufacture">Год выпуска</string>
    <string name="car_oils">Моторные масла</string>
    <string name="car_type_of_oils">Типы моторных масел</string>
    <string name="car_class_of_oils">Класс моторных масел</string>
    <string name="search">Поиск</string>
    <string name="car_engines">Двигатели автомобилей</string>
    <string name="save">Сохранить</string>
    <string name="fuel">Топливо</string>
    <string name="engine_type">Тип двигателя</string>
    <string name="add">Добавить</string>
    <string name="add_car_to_catalog">Добавить новое авто в каталог</string>
    <string name="add_car">Добавление авто</string>
    <string name="upload_photo">Загрузить фото авто</string>
    <string name="oil_volume">Объём заливаемого масла</string>
    <string name="car_models">Модели автомобилей</string>
    <string name="car_bodies">Кузовы автомобилей</string>
    <string name="model_adding">Добавление модели</string>
    <string name="oil_type_adding">Добавление типа масла</string>
    <string name="kinda_operation_adding">Добавление типа операции</string>
    <string name="oil_viscosity_adding">Добавление класса вязкости</string>
    <string name="oil_class_adding">Добавление класса масла</string>
    <string name="car_body_adding">Добавление кузова</string>
    <string name="generation_adding">Добавление поколения</string>
    <string name="engine_mark_adding">Добавление марки двигателя</string>
    <string name="searching_model">Поиск модели</string>
    <string name="searching_car_body">Поиск кузова</string>
    <string name="searching_generation">Поиск поколения</string>
    <string name="searching_engine_mark">Поиск марок двигателей</string>
    <string name="model_editing">Редактирование модели</string>
    <string name="oil_type_editing">Редактирование типа масла</string>
    <string name="kinda_service_editing">Редактирование типа операции</string>
    <string name="oil_viscosity_editing">Редактирование вязкости масла</string>
    <string name="car_body_editing">Редактирование кузова</string>
    <string name="oil_class_editing">Редактирование класса масла</string>
    <string name="generation_editing">Редактирование поколения</string>
    <string name="engine_mark_editing">Редактирование марки двигателя</string>
    <string name="car_generations">Поколение автомобилей</string>
    <string name="engine_marks">Марки двигателей</string>
    <string name="year_of_manufacture">Год выпуска</string>
    <string name="engine_mark">Марка двигателя</string>
    <string name="add_oil">Добавление моторного масла</string>
    <string name="add_oil2">Добавление масла</string>
    <string name="oil_parameters">Параметры масел</string>
    <string name="add_oil_to_list">Добавить масло \nв список</string>
    <string name="oil_types">Типы масел</string>
    <string name="oil_type">Тип масла</string>>
    <string name="oil_classes">Классы моторных масел</string>
    <string name="oil_class_of_viscosity">Классы вязкости</string>
    <string name="oil_class">Класс масла</string>
    <string name="oil_class_viscosity">Класс вязкости</string>
    <string name="oil_viscosity">Классы вязкости</string>
    <string name="operation_types">Типы операций</string>
    <string name="operation_type">Тип операций</string>
    <string name="types">Типы</string>
    <string name="name_of_operation">Название операции</string>
</resources>
