<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/order"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/order_id"
        android:text="@string/_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:id="@+id/address_container_ll"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/address_et"
            android:imeOptions="actionNext"
            android:hint="@string/address"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_add_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:id="@+id/datetime_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:focusable="false"
        android:clickable="false"
        android:imeOptions="actionNext"
        android:inputType="date" />


    <TextView
        android:text="@string/customer_info"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/fullname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:focusable="false"
        android:clickable="false"
        android:imeOptions="actionNext"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/mail"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/mail"
        android:imeOptions="actionNext"
        android:inputType="phone" />
    <Spinner
        android:id="@+id/oil_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>