<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:id="@+id/logo_iv_login"
        android:layout_width="90dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@id/text_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_oil_logo" />

    <TextView
        android:id="@+id/text_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_iv_login"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/login"
        app:layout_constraintTop_toBottomOf="@id/text_auth" />

    <EditText
        android:id="@+id/password_et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/login_et_login" />

    <Switch
        android:id="@+id/remember_me_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:switchPadding="8dp"
        android:text="@string/remember"
        app:layout_constraintEnd_toEndOf="@id/password_et_login"
        app:layout_constraintTop_toBottomOf="@id/password_et_login" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remember_me_switch"
        app:srcCompat="@drawable/ic_iti_logo" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/enter"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>